# msu_cpp_spring_2017

./: .gitignore  CMakeLists.txt  CMakeLists.txt~
00_Grubov/: CMakeLists.txt
00_Grubov/tests/: CMakeLists.txt  main.cpp
Anferov/: CMakeLists.txt
Anferov/Middle_ages/: CMakeLists.txt
Anferov/Middle_ages/Middle_ages.xcodeproj/: project.pbxproj
Anferov/Middle_ages/Middle_ages.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Anferov/Middle_ages/Middle_ages.xcodeproj/project.xcworkspace/xcuserdata/Igor.xcuserdatad/: UserInterfaceState.xcuserstate
Anferov/Middle_ages/Middle_ages.xcodeproj/xcuserdata/Igor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Anferov/Middle_ages/Middle_ages.xcodeproj/xcuserdata/Igor.xcuserdatad/xcschemes/: Middle_ages.xcscheme  Middle_ages_unit_tests.xcscheme  Pattern_army.xcscheme  xcschememanagement.plist
Anferov/Middle_ages/include/: armor.hpp  armor_enum.h  armor_light.hpp  army_factory.hpp  arsenal.hpp  character.hpp  semaphore.hpp  storage.hpp  unit_factory.hpp  weapon.hpp  weapon_enum.h
Anferov/Middle_ages/src/: armor.cpp  army_factory.cpp  character.cpp  main.cpp  pattern_army_main.cpp  semaphore.cpp  storage.cpp  unit_factory.cpp  weapon.cpp
Anferov/Middle_ages/tests/: CMakeLists.txt  GameTests.cpp  GameTests.hpp  test_main.cpp  tests.cpp
Anferov/Middle_ages/tests/googletest-master/googlemock/test/: gmock-generated-actions_test.cc  gmock-more-actions_test.cc
Anferov/Task1_T9/: CMakeLists.txt
Anferov/Task1_T9/src/: T9_translator.cpp
Anferov/Task1_T9/tests/: main.cpp
Anferov/ThreadSafe_Queue/: CMakeLists.txt
Anferov/ThreadSafe_Queue/ThreadSafe_Queue.xcodeproj/: project.pbxproj
Anferov/ThreadSafe_Queue/ThreadSafe_Queue.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Anferov/ThreadSafe_Queue/include/: tsqueue.hpp
Anferov/ThreadSafe_Queue/tests/: CMakeLists.txt  QueueTests.cpp  QueueTests.hpp  test_main.cpp  tests.cpp
Anferov/src/: T9_translator.h  armor.cpp  arsenal.cpp  character.cpp  main.cpp  storage.cpp  storage.hpp  weapon.cpp  weapon_light.hpp
Anferov/task2/: armor.cpp  armor.hpp  character.cpp  character.hpp  protective_properties.cpp  protective_properties.hpp  punching_properties.cpp  punching_properties.hpp  weapon.cpp  weapon.hpp  weapon_skills.cpp  weapon_skills.hpp
Anferov/tests/: CMakeLists.txt  main.cpp
Bespalov/: CMakeLists.txt
Bezsudnova/: CMakeLists.txt
Dorozhkin/ThreadSafeDeque/: CMakeLists.txt  questions
Dorozhkin/ThreadSafeDeque/include/: ThreadSafeDeque.h  ThreadSafeQueue.h  stdafx.h
Dorozhkin/ThreadSafeDeque/src/: ThreadSafeDeque.cpp  ThreadSafeQueue.cpp  main.cpp
Dorozhkin/ThreadSafeDeque/tests/: tests.cpp
Dorozhkin/WarGame/: CMakeLists.txt  questions
Dorozhkin/WarGame/include/: Armor.h  Army.h  Arsenal.h  Barrack.h  Human.h  Location.h  Stadium.h  Weapon.h  include.h  stdafx.h
Dorozhkin/WarGame/src/: Armor.cpp  Army.cpp  Human.cpp  Location.cpp  Weapon.cpp  army_main.cpp  main.cpp  parallel_main.cpp
Dorozhkin/WarGame/tests/: tests.cpp
Ermolaev/task2/: CMakeLists.txt
Ermolaev/task2/include/: Arena.h  Armor.h  Arsenal.h  Barack.h  Person.h  Semaphore.h  Weapon.h  stdafx.h  utils.h
Ermolaev/task2/src/: Arena.cpp  Armor.cpp  Arsenal.cpp  Barack.cpp  Person.cpp  Weapon.cpp  main.cpp  parallel.cpp
Ermolaev/task2/tests/: tests.cpp
Garanyan/: CMakeLists.txt
Garanyan/The Medieval Period fights/: armor.h  person.cpp  person.h  weapon.cpp  weapon.h
Garanyan/TheMedievalPeriodFights/include/: arena.h  armor.h  person.h  stock.h  weapon.h
Garanyan/TheMedievalPeriodFights/src/: arena.cpp  armor.cpp  main.cpp  person.cpp  stock.cpp  weapon.cpp
Garanyan/src/: header.cpp  header.h  main.cpp  t9Spell.cpp  t9Spell.h
Garanyan/tests/: CMakeLists.txt  game.cpp  game.h  header_test.cpp  main.cpp  t9Spell.cpp  t9SpellTest.cpp
Grubov/: CMakeLists.txt
Grubov/include/: Task.h
Grubov/src/: main.cpp  task.cpp
Grubov/tests/: CMakeLists.txt
Monakov/: CMakeLists.txt
Monakov/src/: t9.cpp  t9.h
Monakov/tests/: CMakeLists.txt  t9_test.cpp
Odzhaev/War/: CMakeLists.txt
Odzhaev/War/include/: armor.h  arsenal.h  building.h  human.h  weapon.h
Odzhaev/War/src/: armor.cpp  arsenal.cpp  building.cpp  human.cpp  main.cpp  weapon.cpp
Odzhaev/War/tests/: CMakeLists.txt  test.cpp
Petukhov/tests/: CMakeLists.txt  main.cpp  tests.cpp
Porfireva/war/: CMakeLists.txt
Porfireva/war/include/: a.out  armor.cpp  armor.h  armor.h.gch  arsenal.cpp  arsenal.h  arsenal.h.gch  game.cpp  unit.cpp  unit.h  unit.h.gch  weapon.cpp  weapon.h  weapon.h.gch
Porfireva/war/src/: armor.cpp  arsenal.cpp  game.cpp  unit.cpp  weapon.cpp
Porfireva/war/tests/: CMakeLists.txt  war_test.cpp
bespalov/: CMakeLists.txt
bespalov/tests/: main.cpp
sheviakov/game/: CMakeLists.txt
sheviakov/game/docs/: Doxyfile
sheviakov/game/src/: armor.h  character.h  game.h  main.cpp  weapon.h
sheviakov/game/src/armors/: chainarmor.cpp  chainarmor.h  courselet.cpp  courselet.h
sheviakov/game/src/characters/: archer.cpp  archer.h  knight.h  peasant.cpp  peasant.h
sheviakov/game/src/weapons/: bow.cpp  bow.h  hammer.cpp  hammer.h  shovel.cpp  shovel.h  sword.cpp  sword.h
sheviakov/game/tests/: t9_test.cpp
trempoltsev/: CMakeLists.txt  army.cpp  game2.cpp
trempoltsev/include/: arena_types.h
trempoltsev/include/armors/: armor.h  armor_type.h  chain_armor.h  plate_armor.h  traits.h  without_armor.h
trempoltsev/include/units/: archer.h  knight.h  peasant.h  traits.h  unit.h
trempoltsev/include/weapons/: bow.h  damage_type.h  fists.h  hammer.h  shovel.h  sword.h  traits.h  weapon.h  weapon_type.h
trempoltsev/src/: t9.cpp  t9.h
trempoltsev/src/armors/: armor.cpp  chain_armor.cpp  plate_armor.cpp  without_armor.cpp
trempoltsev/src/units/: archer.cpp  knight.cpp  peasant.cpp  unit.cpp
trempoltsev/src/weapons/: bow.cpp  fists.cpp  hammer.cpp  shovel.cpp  sword.cpp  weapon.cpp
trempoltsev/tests/: CMakeLists.txt  armors_test.cpp  mytest.cpp
trempoltsev/tests/armor/: armors_test.cpp
trempoltsev/tests/unit/: units_test.cpp
trempoltsev/tests/weapon/: weapons_test.cpp
(+295 files in other folders)
